--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-admin-honeypot = "*"
 django-honeypot = "*"
 django = "*"
 django-audittrail = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.8"
